--- a/mongodb/manifest.yaml
+++ b/mongodb/manifest.yaml
@@ -1,3 +1,4 @@
+### Monogdb service
 apiVersion: v1
 kind: Service
 metadata:
@@ -53,3 +54,5 @@ spec:
       resources:
         requests:
           storage: 2Gi
+
+
